--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 .nav-style {
     list-style-type: none;
 }
@@ -7,13 +7,13 @@
     color: #fff;
 }
 
-.nav-style a:hover{
+.nav-style a:hover {
     color: #bdc3c7;
-=======
-.business-header{
+}
+
+.business-header {
     background: url(http://placehold.it/1920x400) center center no-repeat scroll;
     height: 50vh;
     min-height: 300px;
     background-size: cover;
->>>>>>> origin/master
 }
