--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -17,3 +17,14 @@
     min-height: 300px;
     background-size: cover;
 }
+
+.footer-blok{
+    margin-top: 1rem;
+    background-color: #212529;
+    color: #ecf0f1;
+    padding: 2.5em;
+}
+
+.slider{
+    margin-bottom: 5em;
+}
