--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -7,8 +7,8 @@
 
 .footer-blok{
     margin-top: 1rem;
-    background-color: #2c3e50;
-    color: #ecf0f1;
+    background-color: #34495e;
+    color: white;
     padding: 2.5em;
 }
 
@@ -19,3 +19,25 @@
 .portfolio-item {
     margin-bottom: 30px;
 }
+
+.nav-item{
+    list-style-type: none;
+}
+
+.colorAslphalt{
+    color: #34495e;
+}
+
+.backgroundColorAndriodGreen{
+    background: #a3cb38;
+}
+
+.colorMidnight{
+    color:#2c3e50 !important;
+    border-color: #34495e !important;
+}
+
+.btn-outline-success:hover {
+    background-color: #C4E538 !important;
+}
+
