edit a login button

--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -16,7 +16,7 @@
 
 .footer-blok{
     margin-top: 1rem;
-    background-color: #212529;
+    background-color: #C4E538;
     color: #ecf0f1;
     padding: 2.5em;
 }
