--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -23,7 +23,7 @@
 
 .nav-item{
     list-style-type: none;
-    font-weight: bold;
+    font-size: 1.1em;
 }
 
 .colorAslphalt{
@@ -31,16 +31,12 @@
 }
 
 .backgroundColorAndriodGreen{
-    background: #a3cb38;
+    background: #f5f5f5;
 }
 
 .colorMidnight{
-    color:#2c3e50 !important;
+    color:#34495e !important;
     border-color: #34495e !important;
-}
-
-.btn-outline-success:hover {
-    background-color: #C4E538 !important;
 }
 
 .business-header {
@@ -56,4 +52,14 @@
 .active{
     color: #FFFFFF !important;
     text-decoration: underline;
+}
+
+.navlogo{
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.btn-outline-primary:hover{
+    color: #f5f5f5 !important;
+    background-color: #586A7B !important;
 }
