--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -53,6 +53,10 @@
     -o-background-size: cover;
 }
 
+.admin-page {
+    
+}
+
 .active{
     color: #263645 !important;
     text-decoration: underline;
