--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -47,10 +47,12 @@
     height: 60vh;
     min-height: 300px;
     background: url('/view/assets/img/home.jpg') center center no-repeat scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    -o-background-size: cover;
+}
 }
 
 .active{
