--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -70,9 +70,4 @@
 
 .btn-outline-primary:hover{
     color: #f5f5f5 !important;
-    background-color: #586A7B !important;
-}
-
-.bios {
-    margin-left: 7px;
-}
+    background-color: #586A7B !importan
